--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@dnd-kit/core": "^4.0.3",
+    "@dnd-kit/sortable": "^5.1.0",
     "@emotion/react": "^11.7.0",
     "@emotion/styled": "^11.6.0",
     "@material-ui/icons": "^4.11.2",
@@ -12,6 +14,7 @@
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "array-move": "^4.0.0",
     "chroma-js": "^2.1.2",
     "rc-slider": "^9.7.5",
     "react": "^17.0.2",
@@ -21,6 +24,7 @@
     "react-material-ui-form-validator": "^3.0.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-sortable-hoc": "^2.0.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
