--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@testing-library/user-event": "^12.8.3",
     "array-move": "^4.0.0",
     "chroma-js": "^2.1.2",
+    "emoji-mart": "^3.0.1",
     "rc-slider": "^9.7.5",
     "react": "^17.0.2",
     "react-color": "^2.19.3",
